# gelpia

./: .gitignore  Cargo.toml  LICENSE  Makefile  README  README.md  README.rtfm  build.sh  build_func.sh  constraint_test_00.dop  constraint_test_01.dop  contributors.txt  function_lexer.py  function_parser.py  function_to_rust.py  function_utils.py  interpreter.txt
.github/workflows/: pythonapp.yml
benchmarks/: regtest.py
benchmarks/classical_tests/: README.md
benchmarks/dop_benchmarks/: pows.dop
benchmarks/flyspeck/: TSKAJXY-eulerA.dop  delta_x4_[2485876245a].dop  delta_x_[4717061266].dop  dih_x_1893_[5490182221].dop  dih_x_[3318775219].dop
benchmarks/fptaylor_generated/: F1.txt  F2.txt  const_function.txt  gelpia_doppler_3.txt  gelpia_jet.txt  gelpia_sine.txt  sin2.txt  six_vars.txt  tan.txt  test02_sum8.txt  test04_dqmom3.txt  test04_dqmom32.txt  test05_nonlin1.txt  testcase1.txt  testcase2.txt  tft_gelpia_deadlock.txt  tft_gelpia_query.txt  timeout_test.txt  weifan_1.txt  weifan_2.txt  zvon.txt
docs/: Solver_Creation_Tutorial.txt
documents/: BuildingRequirements  BuildingRequirements.md  FunctionInterpreter.md  QueryFormat.md  README  const_interpreter.txt  contributors.txt  example_1.dop  gaol-4.2.0.patch  interpreter.txt
examples/: F1.txt  F2.txt  __tft_gelpia_query.txt  abs.txt  abs_transform_test.txt  const_function.txt  cos.txt  exp.txt  gelpia_2.txt  gelpia_doppler_3.txt  gelpia_jet.txt  gelpia_sine.txt  gelpia_turbine_3.txt  interval_test.txt  log.txt  pow.txt  sin.txt  sin2.txt  six_vars.txt  sqrt.txt  tan.txt  test01_sum3.txt  test02_sum8.txt  test03_nonlin2.txt  test04_dqmom3.txt  test04_dqmom32.txt  test04_dqmom9.txt  test05_nonlin1.txt  testcase1.txt  testcase2.txt  timeout_test.txt
gelpia-python-src/: box.cc  fast_box.cc  fast_interval.cc  feeder_parallel_solver.py  function.cc  gelpia  ian_utils.py  interval.cc  large_float.cc  map_parallel_solver.py  naive_parallel_solver.py  priority_serial_solver.py  split_parallel_solver.py
gelpia-python-src/rewriter/: reader.py
include/: box.h  fast_box.h  fast_interval.h  function.h  interval.h  large_float.h  optimizer_helpers.h
interface/: box.i  function.i  gelpia_utils.i  interval.i  large_float.i  optimizer_helpers.i  testable_utils.i
lexical_source/: F1.txt  F2.txt  abs.txt  comments.txt  gelpia_2.txt  gelpia_doppler_3.txt  gelpia_jet.txt  gelpia_sine.txt  lang.txt  number_literals.txt  sin.txt  sin2.txt  six_vars.txt  test02_sum8.txt  test03_nonlin2.txt  test05_nonlin1.txt
lockfree/: Makefile
lockfree/src/: functions.h  globopt-par-lockfree.cc  globopt-par1.cc  (+4 more)
requirements/: build.sh
rework/: Makefile
rust/: solver.rs
src/: box.cc  fast_box.cc  fast_priority_serial_solver.py  feeder_parallel_solver.py  function.cc  functions.cc  functions.h  gaol_repl.cc  gelpia  globopt-par-lockfree.cc  globopt-par1-lockfree.cc  globopt-par1.cc  globopt-sol2.cc  globopt.cc  globopt.py  gu.rs  harness.h  helpers.cc  helpers.h  ian_utils.py  input_parser.py  interval.cc  large_float.cc  main.rs  map_parallel_solver.py  map_serial_solver.py  multiworker.py  naive_parallel_solver.py  optimizer_helpers.cc  paperopt.py  priority_serial_solver.py  serial_solver.py  solvers.h  split_parallel_solver.py  test_stack.rs  tester.cc  timer.cc  timer_tester.cc
src/ga/: Cargo.toml  algorithm.rs
src/gr/: Cargo.toml  build.rs
src/gr/src/: gaol.rs  gaol_wrap.cc  gaol_wrap.hh
test/: box_test.py  example_swig.py  globopt.py  interval_test.py  large_float_test.py  multiworker.py  non-pri-paperopt.py  testable_utils_test.py
tests/: acosh.dop  asinh.dop  atanh.dop  cosh.dop  sinh.dop  tanh.dop
(+160 files in other folders)
