[package]
name = "gelpia"
version = "0.0.1"
authors = ["Mark S. Baranowski <mark.s.baranowski@gmail.com>", "Ian Briggs <ianbriggsutah@gmail.com>"]

[[bin]]
name = "cooperative"
path = "src/bin/cooperative.rs"

[[bin]]
name = "serial"
path = "src/bin/serial.rs"

[dependencies]
gr = { path = "src/gr" }
gelpia_utils = { path = "src/gelpia_utils" }
ga = { path = "src/ga" }
args = { path = "src/args" }
function = { path = "src/function" }
getopts = "0.2.*"
rand = "0.3.*"
time = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
#lto = true
debug-assertions = false
codegen-units = 1
