[package]
name  = "ga"
version = "0.0.1"
authors = ["Andy Schwartzmeyer (modified by Mark S. Baranowski)"]

[lib]
name = "ga"
path = "algorithm.rs"

[dependencies]
rand = "0.3.*"
time = "*"

[dependencies.gelpia_utils]
path = "../.."

[dependencies.gr]
path = "../.."

[dependencies.function]
path = "../.."

