[package]
name  = "ga"
version = "0.0.1"
authors = ["Ian Briggs and Marek Baranowski"]

[lib]
name = "ga"
path = "algorithm.rs"

[dependencies]
rand = "0.3.*"
time = "0.1.*"

[dependencies.gelpia_utils]
path = "../gelpia_utils"

[dependencies.gr]
path = "../gr"

[dependencies.function]
path = "../function"

