[package]
name  = "gr"
version = "0.0.1"
authors = ["Mark S. Baranowski"]
build="build.rs"


[lib]
name = "gr"
path = "src/gaol.rs"
crate-type = ["dylib"]

[dependencies]
libc = "=0.2.69"
simd = { git = "https://github.com/huonw/simd.git" }
num-traits = "=0.1.39"

[build-dependencies]
gcc = "=0.3.54"

